[gd_scene load_steps=4 format=3 uid="uid://bdd5e80e881eh"]

[ext_resource type="Script" path="res://EuBraBo/Script/Objeto/pratileleira_de_fruta.gd" id="1_ha6ae"]
[ext_resource type="Texture2D" uid="uid://bekbvaeey7tlt" path="res://EuBraBo/Sprites/taleMaps/TilemapDaLoja_2.png" id="1_nu6oc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sw65o"]
size = Vector2(16, 16)

[node name="PratileleiraDeFruta" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource("1_ha6ae")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_sw65o")

[node name="pratileiraMeia" type="Sprite2D" parent="."]
texture = ExtResource("1_nu6oc")
region_enabled = true
region_rect = Rect2(0, 32, 16, 24)

[node name="pratileiraVasia" type="Sprite2D" parent="."]
texture = ExtResource("1_nu6oc")
region_enabled = true
region_rect = Rect2(16, 32, 16, 24)

[node name="pratileiraCheia" type="Sprite2D" parent="."]
texture = ExtResource("1_nu6oc")
region_enabled = true
region_rect = Rect2(0, 0, 16, 24)
